# vibration

./: LICENSE  README.md  agents.py  app.py  environment.yml  registry.toml
explain/: .env_sample  coral-agent.toml  main.py  pyproject.toml
interface/: .env_sample  coral-agent.toml  main.py  pyproject.toml
model/: bearing_cnn_model.h5  label_encoder.pkl
